syntax = "proto3";

package huton_proto;

message CacheSet {
    string cache_name = 1;
    bytes key = 2;
    bytes value = 3;
}

message CacheDel {
    string cache_name = 1;
    bytes key = 2;
    bytes value = 3;
}

message CacheSetResp {

}

message CacheDelResp {
    
}

service Cache {
    rpc Set(CacheSet) returns (CacheSetResp);
    rpc Del(CacheDel) returns (CacheDelResp);
}